<resources>
    <string name="app_name">+40</string>
    <string name="next_button">Siguiente</string>
    <string name="user_name_str">Nombre completo</string>
    <string name="user_age_str">Edad</string>
    <string name="user_height_str">Altura(cm)</string>
    <string name="user_weigth_str">Peso(Kg)</string>
    <string name="welcome_msg">+40 es una aplicación para realizar ejercicio en casa orientada en las necesidades del usuario.</string>
    <string name="welcome_title">Bienvenido a +40</string>
    <string name="exercise_freq_str">¿Cuantas veces a la semana realiza ejercicio?</string>
    <string name="welcome">Mensaje de bienvenida</string>

    <string-array name="exercise_freq_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="dificulty_str">Dificultad deseada</string>
    <string-array name="dificulty_array">
        <item>Principiante</item>
        <item>Intermedio</item>
        <item>Avanzado</item>
    </string-array>

    <string name="equipment_str">Poseo implementos de ejercicio</string>
    <string name="register_button">Registrar datos</string>

    <string name="exercise_type_str">¿Cual tema te gustaria trabajar? Selecciona una de las siguientes opciones:</string>
    <string name="aerobicos_str">Ha seleccionado ejercicios <b>Aerobicos</b></string>
    <string name="yoga_str">Ha seleccionado <b>Yoga</b></string>
    <string name="genericos_str">Ha seleccionado ejercicios <b>Genericos</b></string>
    <string name="finished_str">Finalizar</string>
    <string name="nav_abierto">Barra Lateral Abierta</string>
    <string name="nav_cerrado">Barra Lateral Cerrada</string>
    <string name="dificulty_item">Cambiar nivel</string>
    <string name="myprofile_item">Mi perfil</string>
    <string name="exercise_type_item">Cambiar tipo de ejercicio</string>
    <string name="change_exercise_type_str">Seleccione el nuevo tipo de ejercicio que desea realizar</string>
    <string name="finished_button">Finalizar</string>
</resources>