<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ExerciseCategoryFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercise_type_str"
                android:gravity="center"
                android:layout_marginBottom="15dp"
                android:textColor="@color/primaryText"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:text="@string/aerobicos_str"
                    android:gravity="center"
                    android:background="@drawable/semi_pill"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:layout_marginBottom="15dp"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:text="@string/yoga_str"
                    android:gravity="center"
                    android:background="@drawable/semi_pill"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:layout_marginBottom="15dp"/>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:text="@string/genericos_str"
                    android:gravity="center"
                    android:background="@drawable/semi_pill"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:layout_marginBottom="15dp"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>