<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserPersonalDataFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageUserData"
            android:layout_width="145dp"
            android:layout_height="106dp"
            android:src="@drawable/checklist"
            android:layout_gravity="center"
            android:tint="@color/colorPrimary"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="0dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="start"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/user_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/user_name_str"/>

            <EditText
                android:id="@+id/editTextUserName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:background="@drawable/text_edit"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:baselineAligned="true">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_age_str" />

                <EditText
                    android:id="@+id/editTextUserAge"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:ems="10"
                    android:inputType="number"
                    android:background="@drawable/text_edit"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_height_str" />

                <EditText
                    android:id="@+id/editTextUserHeight"
                    android:layout_width="66dp"
                    android:layout_height="45dp"
                    android:ems="10"
                    android:inputType="number"
                    android:background="@drawable/text_edit"
                    android:paddingStart="10dp"
                    android:paddingRight="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="end"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_weigth_str" />

                <EditText
                    android:id="@+id/editTextUserWeight"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:ems="10"
                    android:inputType="number"
                    android:background="@drawable/text_edit"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/userPersonalDataFragmentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            android:layout_gravity="end"
            android:gravity="center"
            android:background="@drawable/rounded_corners"
            android:textColor="#ffffff"
            android:textSize="13dp"/>
    </LinearLayout>
</FrameLayout>