<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".InformationFragment"
    android:id="@+id/information_fragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="@dimen/cardview_default_elevation"
        android:theme="@style/Theme.AppCompat.Light"
        app:cardCornerRadius="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:src="@drawable/emoji"
                android:tint="@color/colorPrimary"/>

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginBottom="15dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/welcome_title"
                android:gravity="center_horizontal"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/messageTextView"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:textColor="@color/primaryText"
                android:textSize="15dp"
                android:layout_marginBottom="20dp"
                android:textStyle="normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/welcome_msg"/>
            <Button
                android:id="@+id/informationFragmentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_button"
                android:textColor="#ffffff"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_corners"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>